# Skat

./: .gitignore  .travis.yml  BUILD.bazel  README.md  bidding.py  card.py  dodo.py  main.py  main_test.py  requirements.txt  setup_round.py  sonar-project.properties  test.py  tests.py
classes/: bidding_class.py  card.py  cards.py  game.py  play_round.py  player_class.py  round.py  setting_container.py  single_player_setup.py  tools.py
modules/: Bidding.py  Card.py  Cards.py  Player.py  Players.py  Round.py  SettingContainer.py  Stich.py  bidding.py  bidding_class.py  card.py  cards.py  create_settings.py  end_round.py  play_round.py  player_class.py  round_class.py  setting_container.py  setup_round.py  setup_single_play.py  tools.py
modules/language-settings/: Settings-de.json  Settings-en.json
source/: buildtool.rst  cleancode.rst  conf.py  continous.rst  dsl.rst  functional.rst  functions.rst  index.rst  metrics.rst  unittest.rst
tests/: Players_test.py  bidding_test.py  card_test.py  end_round_test.py  main_test.py  play_round_test.py  player_test.py  round_test.py  settingContainer_test.py  tools_test.py
